component voucher, create, delete

--- a/src/app/vouchers-components/create-voucher/create-voucher.component.html
+++ b/src/app/vouchers-components/create-voucher/create-voucher.component.html
@@ -5,7 +5,7 @@
   alignment="center">
   
   <c-modal-header>
-    <h5 cModalTitle class="fw-semibold">Tambah Voucher</h5>
+    <h5 cModalTitle class="fw-semibold">{{ title }}</h5>
     <button type="button" cButtonClose (click)="onClose()"></button>
   </c-modal-header>
 
