--- a/src/app/views/widgets/widgets/widgets.component.html
+++ b/src/app/views/widgets/widgets/widgets.component.html
@@ -12,8 +12,8 @@
           </div>
           <div>
             <h6 class="fw-semibold">Total Transaksi</h6>
-             <p class="mb-0 text-muted small" style="color: transparent !important;">Jumlah</p>
-            <h5 class="fw-bold text-primary mb-0">200</h5>
+             <h5 class="w-bold text-primary mb-0" >200</h5>
+            <h5 class="fw-bold text-primary mb-0" style="color: transparent !important;">200</h5>
           </div>
         </div>
       </div>
