--- a/src/app/authentifications-components/forget-password/forget-password.component.html
+++ b/src/app/authentifications-components/forget-password/forget-password.component.html
@@ -1,1 +1,30 @@
-<p>forget-password works!</p>
+<div class="bg-light dark:bg-transparent min-vh-100 d-flex flex-row align-items-center">
+  <c-container breakpoint="md">
+    <c-row class="justify-content-center">
+        <div class="auth-container d-flex align-items-center justify-content-center min-vh-100">
+            <div class="card shadow-sm p-4" style="width: 380px; border-radius: 16px;">
+            <div class="text-center mb-4">
+                <img src="assets/brand/logo.svg" alt="PioneerSolve" width="40">
+                <h5 class="mt-2 fw-bold">Lupa Password?</h5>
+                <p class="text-muted small mt-2">
+                Masukkan email Anda untuk menerima tautan reset password.
+                </p>
+            </div>
+
+            <form>
+                <div class="mb-3">
+                <label class="form-label">Email</label>
+                <input type="email" class="form-control" placeholder="nama@email.com">
+                </div>
+
+                <button type="submit" class="btn btn-primary w-100 py-2 fw-semibold">Kirim Tautan Reset</button>
+            </form>
+
+            <div class="text-center mt-3 small">
+                <a [routerLink]="['/login']" class="text-primary text-decoration-none fw-semibold">Kembali ke Halaman Login</a>
+            </div>
+            </div>
+        </div>
+    </c-row>
+  </c-container>
+</div>
